--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,19 @@
 alembic==1.0.5
 asn1crypto==0.24.0
 astroid==2.1.0
+blinker==1.4
+certifi==2018.11.29
 cffi==1.11.5
+chardet==3.0.4
 Click==7.0
 cryptography==2.4.2
 Flask==1.0.2
+Flask-Login==0.4.1
+Flask-Mail==0.9.1
 Flask-Migrate==2.3.1
+Flask-ReCaptcha==0.4.2
 Flask-Script==2.0.6
+Flask-SendGrid==0.6
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 idna==2.8
@@ -26,9 +33,14 @@ pyOpenSSL==18.0.0
 python-dateutil==2.7.5
 python-dotenv==0.10.1
 python-editor==1.0.3
+python-http-client==3.1.0
+requests==2.21.0
+sendgrid==5.6.0
 six==1.12.0
 SQLAlchemy==1.2.15
 typed-ast==1.1.1
+urllib3==1.24.1
+uuid==1.30
 Werkzeug==0.14.1
 wrapt==1.10.11
 WTForms==2.2.1
