Fix PostgreSQL connetion error

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,5 @@
-SQLALCHEMY_DATABASE_URI = 
-SQLALCHEMY_TRACK_MODIFICATIONS = 
-SECRET_KEY = 
-SECURITY_PASSWORD_SALT = 
-MAIL_DEFAULT_SENDER = 
-SENDGRID_API_KEY = 
+SQLALCHEMY_DATABASE_URI=
+SECRET_KEY=
+SECURITY_PASSWORD_SALT=
+MAIL_DEFAULT_SENDER=
+SENDGRID_API_KEY=
