--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 alembic==1.0.5
 asn1crypto==0.24.0
 astroid==2.1.0
+atomicwrites==1.2.1
+attrs==18.2.0
 blinker==1.4
 certifi==2018.11.29
 cffi==1.11.5
 chardet==3.0.4
 Click==7.0
+coverage==4.5.2
 cryptography==2.4.2
 Flask==1.0.2
 Flask-Login==0.4.1
@@ -15,6 +18,7 @@ Flask-ReCaptcha==0.4.2
 Flask-Script==2.0.6
 Flask-SendGrid==0.6
 Flask-SQLAlchemy==2.3.2
+Flask-Testing==0.7.1
 Flask-WTF==0.14.2
 idna==2.8
 isort==4.3.4
@@ -24,11 +28,15 @@ lazy-object-proxy==1.3.1
 Mako==1.0.7
 MarkupSafe==1.1.0
 mccabe==0.6.1
+more-itertools==4.3.0
+pluggy==0.8.0
 psycopg2==2.7.6.1
 psycopg2-binary==2.7.6.1
+py==1.7.0
 pycparser==2.19
 pylint==2.2.2
 pyOpenSSL==18.0.0
+pytest==4.0.2
 python-dateutil==2.7.5
 python-dotenv==0.10.1
 python-editor==1.0.3
