--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asn1crypto==0.24.0
 astroid==2.1.0
 atomicwrites==1.2.1
 attrs==18.2.0
+bcrypt==3.1.5
 blinker==1.4
 certifi==2018.11.29
 cffi==1.11.5
@@ -29,6 +30,7 @@ Mako==1.0.7
 MarkupSafe==1.1.0
 mccabe==0.6.1
 more-itertools==4.3.0
+pep8==1.7.1
 pluggy==0.8.0
 psycopg2==2.7.6.1
 psycopg2-binary==2.7.6.1
