--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,20 @@
+sudo: true
+
 language: python
+
 python:
   - "3.6"
+
+addons:
+  postgresql: '10'
+  apt:
+    packages:
+      - postgresql-10-postgis-2.4
+      - postgresql-10-postgis-2.4-scripts
+      - postgresql-client-10
+
 install:
   - pip install -r requirements.txt
+
 script:
   - python manage.py test
