--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,15 @@ python:
   - "3.6"
 
 addons:
-  postgresql: '10'
-  apt:
-    packages:
-      - postgresql-10-postgis-2.4
-      - postgresql-10-postgis-2.4-scripts
-      - postgresql-client-10
+    postgresql: '10'
+    apt:
+        packages:
+        - postgresql-10
+        - postgresql-client-10
 
 before_install:
-  - sudo -u postgres psql -c "CREATE USER travis WITH PASSWORD 'travis'"
-  - sudo -u postgres psql -c "ALTER ROLE travis SUPERUSER"
+  - psql -c "CREATE USER travis WITH PASSWORD 'travis'" -U postgres
+  - psql -c "ALTER ROLE travis SUPERUSER" -U postgres
 
 install:
   - pip install -r requirements.txt
