--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ addons:
   postgresql: "9.5"
 
 before_install:
-  - psql -c "CREATE USER travis WITH PASSWORD 'travis'" -U postgres
-  - psql -c "ALTER ROLE travis SUPERUSER" -U postgres
+  - psql -c "CREATE USER travis_admin WITH PASSWORD 'travis_admin'" -U postgres
+  - psql -c "ALTER ROLE travis_admin SUPERUSER" -U postgres
 
 install:
   - pip install -r requirements.txt
